2017-03-30 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 1.11-rc1
	* PRE_BUILD: jpeg -> libjpeg
	* mupdf-10a-shared_libs-1.patch: updated

2017-01-12 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 1.10a
	* PRE_BUILD: use shipped openjpeg library if we have old system one
	* mupdf-1.10a-shared_libs-1.patch: added, to build shared libraries,
	  imported from BLFS
	* opj_malloc.patch: added, to fix build with internal openjpeg library
	* linebreak.patch, mupdf-1.9-upstream_fix-1.patch, openjpeg-2.1.patch:
	  dropped, fixed by upstream
	* openjpeg-1.5.patch: dropped, replaced by internal library

2016-10-01 Vlad Glagolev <stealth@sourcemage.org>
	* UP_TRIGGERS: added, to rebuild spells depending on mupdf static libs

2016-09-30 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: added forgotten SECURITY_PATCH
	* BUILD: dropped not required '-fstack-protector-all', replaced by
	  linebreak.patch
	* PRE_BUILD: apply the patch
	* linebreak.patch: added my patch to prevent a DoS while opening a
	  malformed EPUB file

2016-09-29 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 1.9a; updated descriptions
	* DEPENDS: added missing dependencies (harfbuzz, SSL, curl, glfw)
	* BUILD: added '-fstack-protector-all' to prevent crashes on specific
	  EPUB files; fixed verbose output; respect OPTS
	* INSTALL: respect OPTS
	* PRE_BUILD: added, to apply patches and remove thirdparty libs to
	  respect system versions of those
	* openjpeg-1.5.patch: added, to compile with openjpeg 1.5.2
	* openjpeg-2.1.patch: added, to compile with openjpeg 2.1.2
	* mupdf-1.9-upstream_fix-1.patch: added, official patch to fix
	  CVE-2016-6265

2014-10-10 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 1.6; added archive url

2014-04-18 Thomas Orgis <sobukus@sourcemage.org>
	* DETAILS: updated spell to 1.4; changed source extension to tar.gz;-)
	* BUILD: insert compiler flags as desired by Makefile
