@@ -1,14 +1,19 @@
            SPELL=mupdf
+if [[ "${MUPDF_BRANCH}" == "rc" ]]; then
          VERSION=1.11-rc1
+     SOURCE_HASH=sha512:777385bbf6dffc29f1306fa193d40b495a331d785bbc79c835f286ff34dc1f8b55ec905bf064a0bc7ceef1950f763ba6a0a1c07039564209354fbeeadfd32b70
+else
+         VERSION=1.10a
+     SOURCE_HASH=sha512:8c735963364985e74ceb38242afae555a3d2ee7c69abe3fe5c485e8613a83d996a58f231cb689a156019d431fa67d565503247d010b0a404054850483aed9fec
+fi
   SECURITY_PATCH=1
           SOURCE=$SPELL-$VERSION-source.tar.gz
    SOURCE_URL[0]=http://mupdf.com/downloads/$SOURCE
    SOURCE_URL[1]=http://mupdf.com/downloads/archive/$SOURCE
-     SOURCE_HASH=sha512:0f006bac2c892dcc0349900060b25ee794b17866e08df63f7a08adcfbaec59a61a77fdcc5f77a8fa8bd61f58ff62e63843cf28dca9b45a42e7676f7b433b28ab
 SOURCE_DIRECTORY="$BUILD_DIRECTORY/$SPELL-$VERSION-source"
         WEB_SITE=http://www.mupdf.com/
          ENTERED=20120426
-      LICENSE[0]=GPL
+      LICENSE[0]="AGPL"
         KEYWORDS="pdf"
            SHORT="lightweight PDF, XPS, EPUB and CBZ viewer and parser/rendering library"
 cat << EOF
