@@ -1,0 +1,2 @@
+. "${GRIMOIRE}/FUNCTIONS" &&
+prepare_select_branch stable rc
