@@ -3,9 +3,9 @@ cd "${SOURCE_DIRECTORY}" &&
 
 sedit "/OPJ_STATIC$/d" source/fitz/load-jpx.c &&
 sedit "s:-DOPJ_STATIC::" Makethird &&
-patch -p1 < "${SPELL_DIRECTORY}/mupdf-1.10a-shared_libs-1.patch" &&
+patch -p1 < "${SPELL_DIRECTORY}/mupdf-${VERSION}-shared_libs-1.patch" &&
 
-rm -rf thirdparty/{curl,freetype,harfbuzz,glfw,jbig2dec,libjpeg,zlib} &&
+rm -rf thirdparty/{curl,freetype,harfbuzz,glfw,jbig2dec,jpeg,libjpeg,zlib} &&
 
 # building against older system OpenJPEG library is unsupported
 if spell_ok openjpeg && ! is_version_less $(installed_version openjpeg) 2.0; then
