@@ -1,7 +1,11 @@
+2017-03-31 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS, PREPARE, PRE_BUILD, mupdf-${VERSION}-shared_libs-1.patch:
+	  added multiversioning, updated hash for 1.11-rc1, GPL -> AGPL
+
 2017-03-30 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: version 1.11-rc1
 	* PRE_BUILD: jpeg -> libjpeg
-	* mupdf-10a-shared_libs-1.patch: updated
+	* mupdf-1.10a-shared_libs-1.patch: updated
 
 2017-01-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.10a
